--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-to-text": "^9.0.4",
     "jodit-react": "^1.3.36",
     "prop-types": "^15.8.1",
+    "quill-emoji": "^0.2.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
